...
                app:helperText="*Required"
                app:helperTextEnabled="true"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/common_google_signin_btn_icon_disabled">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/select_date_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date" />

...
                app:helperText="*Required"
                app:helperTextEnabled="true"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/common_google_signin_btn_icon_disabled">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enter_description"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10" />

            </com.google.android.material.textfield.TextInputLayout>
...
