<resources>
    <string name="app_name">hiking_2</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_add">Add</string>
    <string name="title_account">Login</string>
    <string name="title_map">Map</string>

    <!--single page-->
    <string name="theme_name">Board Walk Trail</string>
    <string name="search">search by tags</string>
    <string name="theme_name_txt_1">name</string>
    <string name="title_activity_maps">Map</string>


    <!--testing add newTheme popupwindow-->
    <string name="submit">Submit</string>
    <string name="title_activity_add_theme">AddTheme</string>
    <string name="title_activity_add_report">AddReport</string>

</resources>
